1st version correct

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </section>
       <section class="photo-grid">
           <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="ариса">
-          <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg">
+          <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="вид на снежную гору">
           <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="байкал 2">
           <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="байкал">
           <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="эльбрус">
