--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <article class="place places__item">
             <h3 class="place__title">Куршская коса</h3>
             <div class="place__website">
-              <p class="place__website_url-heading">URL</p>
-              <a class="place__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
+              <p class="place__website__url-heading">URL</p>
+              <a class="place__website__link" href="http://park-kosa.ru">park-kosa.ru</a>
             </div> 
             <img class="place__image" src="images/place-kosa.jpg" alt="Куршская Коса">
           <div class="place__description">
@@ -66,8 +66,8 @@
         <article class="place places__item">
           <h3 class="place__title">Кольский</h3>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+            <p class="place__website__url-heading">URL</p>
+            <a class="place__website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
           </div>  
             <img class="place__image" src="images/place-kolsky.jpg" alt="Кольский">
           <div class="place__description">
@@ -81,8 +81,8 @@
         <article class="place places__item">
           <h3 class="place__title">Алтай</h3>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+            <p class="place__website__url-heading">URL</p>
+            <a class="place__website__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
           </div>
           <img class="place__image" src="images/place-altai.jpg" alt="Алтай">
           <div class="place__description">
@@ -94,8 +94,8 @@
         <article class="place places__item">
           <h3 class="place__title">Зимний байкал</h3>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+            <p class="place__website__url-heading">URL</p>
+            <a class="place__website__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="images/place-winter-baikal.jpg" alt="Зимний Байкал">
           <div class="place__description">         
@@ -109,8 +109,8 @@
         <article class="place places__item">
           <h3 class="place__title">Карелия</h3>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
+            <p class="place__website__url-heading">URL</p>
+            <a class="place__website__link" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="images/place-karelia.jpg" alt="Карелия">
           <div class="place__description">
