--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <div class="page">
     <header class="header">
         <img class="header__logo" src="images/header-logo.svg" alt="Карта России лого">
-        <nav class="header__links"> 
+        <div class="header__links"> 
           <a href="#" class="header__lang-link">Ru</a>
           <a href="#" class="header__lang-link">En</a>
-        </nav>
+        </div>
     </header>
     <main class="content">
       <section class="lead">
-        <h2 class="lead__title">Путешествия по России</h2>
-        <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
+        <h1 class="lead__title">Путешествия по России</h2>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img class="lead__image" src="images/lead-polka.jpg" alt="вид из окна поезда">
         <div class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</div>
       </section>
