--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <img class="header__logo" src="images/header-logo.svg" alt="Карта России лого">
         <div class="header__links"> 
-          <a href="#" class="header__lang-link">Ru</a>
+          <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
           <a href="#" class="header__lang-link">En</a>
         </div>
     </header>
@@ -20,7 +20,7 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img class="lead__image" src="images/lead-polka.jpg" alt="вид из окна поезда">
-        <div class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</div>
+        <p class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</p>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
